# simpleNFB

./: .gitignore  CLAUDE.md  DAT_browser.py  LONG_TERM_MEMORY.md  README.md  SHORT_TERM_MEMORY.md  SXM_browser.py  WORKING_MEMORY.md  jupyter_launch_script.bat  pc_jupyter_launch_script.bat  pyproject.toml  sNFB.ipynb  user_jupyter_launch_script.bat  v03_sNFB.ipynb
Notebooks/: sNFB_Debugging.ipynb  sNFB_Template.ipynb
simpleNFB/: DAT_browser.py  SXM_browser.py  __init__.py  _browser.py  base_browser.py  fileBrowser.py  pipeline_panel.py  process_utils.py  snfb.py  spe_browser.py  spe_loader.py  widget_helpers.py
simpleNFB/processes/: __init__.py  despike_z_score.py  fix_zero.py  fix_zero_2d.py  gaussian_filter_2d.py  group_average.py  invert.py  laplace_2d.py  median_filter_1d.py  median_filter_2d.py  moving_average.py  normalize_max.py  offset_traces.py  rebin_nm_to_ev.py  remove_line_average.py  smooth_savgol.py  threshold_clip.py
simpleNFB/spmpy/: machine_config.yaml
simpleNFB/support_scripts/: Lysander_Grouping_and_Filtering.py
simpleNFB/support_scripts/EA/: __Lightfield_Execution_v0.14_EA.ipynb  stml_base.py
simpleNFB/templates/dat/: default.json
simpleNFB/templates/sxm/: default.json
tests/sample_files/: img0013_H2PcDataset.sxm
