[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleNFB"
version = "0.2.0"
description = "Jupyter widget browsers for Nanonis SXM and DAT spectroscopy data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "ipywidgets>=8.0",
    "matplotlib>=3.8",
    "ipympl>=0.9",
    "numpy>=1.23",
    "scipy>=1.9",
    "pyyaml>=6.0",
    "spmpy @ git+https://github.com/nanotech-empa/spmpy.git",
    # spmpy declares its own deps (nanonispy, SPIEPy, matplotlib, numpy);
    # pip resolves and installs them transitively via the flit_core build.
]

[project.optional-dependencies]
clipboard = ["pywin32>=306"]   # Windows clipboard support in copy_figure

[tool.setuptools.packages.find]
where = ["."]
include = ["simpleNFB*"]
exclude = ["simpleNFB.support_scripts*", "simpleNFB.spmpy*"]
